<resources>
    <string name="app_name">Workorders</string>

    <!-- Prompt strings -->
    <string name="prompt_email">Korisničko ime</string>
    <string name="prompt_password">Šifra</string>
    <string name="prompt_search_workorder">Broj radnog naloga</string>
    <string name="prompt_ttv_ocr_scann">Skenirajte serijski broj kartice: </string>

    <!-- Actions string -->
    <string name="action_sign_in">Prijava</string>
    <string name="action_sign_in_short">Prijava</string>
    <string name="action_logout">Odjavi se</string>
    <string name="action_search_workorder_short">Broj radnog naloga</string>
    <string name="action_search">Pretraga</string>
    <string name="action_ttv_ocr_scan_serial">Unesite/Skenirajte serijski broj: </string>
    <string name="action_ttv_ocr_scan_serial_short">Serijski broj:</string>
    <string name="action_ttv_ocr_scan_box">Skenirajte serijski broj boxa: </string>
    <string name="action_ttv_ocr_scan_box_short">Mac adresa:</string>

    <!-- Errors string -->
    <string name="error_invalid_email">Email je neispravan</string>
    <string name="error_invalid_username_password">Neispravno korisničko ime ili šifra</string>
    <string name="error_incorrect_password">Neispravna šifra</string>
    <string name="error_field_required">Obavezno polje</string>
    <string name="error_user_not_exist">Korisnik nije aktivan</string>
    <string name="error_server">Došlo je do greške prilikom povezivanja sa serverom. pokušajte ponovo.</string>
    <string name="error_general">Došlo je do greške!</string>
    <string name="error">Greška</string>


    <!-- Title strings -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Početna</string>
    <string name="title_nalozi">Nalozi</string>
    <string name="title_support">Podrška</string>
    <string name="title_profile">Profil</string>
    <string name="title_search">Pretraga</string>
    <string name="title_totaltv">Total TV</string>


    <!-- Profile Strings -->
    <string name="profile_first_name">Ime</string>
    <string name="profile_last_name">Prezime</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Telefon</string>
    <string name="profile_logout_message">Da li ste sigurni da zelite da se odjavite?</string>
    <string name="profile_sap_team_no">SAP tim ID</string>
    <string name="profile_internal_team_no">Interni tim ID</string>

    <!-- Wizard button strings -->
    <string name="action_previous">Back</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>

    <!-- wizard pager-->
    <string name="review">Pregled</string>
    <string name="geo_status_searching">Waiting GPS &#8230;</string>
    <string name="geo_status_found">Location found</string>
    <string name="geo_status_location">%1$s \n(%2$s)</string>
    <string-array name="image_photo_sources">
        <item>Pick from gallery</item>
        <item>Capture new photo</item>
    </string-array>

    <string name="next">Dalje</string>
    <string name="prev">Prethodno</string>
    <string name="finish">Završi</string>
    <string name="submit_confirm_message">Da li ste sigurni da želite da pošaljete radni zadatak.</string>
    <string name="submit_confirm_button">OK</string>

    <string name="scan">Scan</string>
    <string name="read_text">MAC</string>
    <string name="read_serial">SERIAL</string>
    <string name="read_mta">MTA MAC</string>

    <!-- TOTAL TV Page fizard -->
    <string name="ttv_first_name">Ime</string>
    <string name="ttv_last_name">Prezime</string>
    <string name="ttv_jbmg">JMBG</string>
    <string name="ttv_city">Grad</string>
    <string name="ttv_region">Region</string>
    <string name="ttv_street">Ulica</string>
    <string name="ttv_house_number">Kućni broj</string>
    <string name="ttv_sub_number">Podbroj</string>
    <string name="ttv_fix_number">Telefonski broj</string>
    <string name="ttv_mobile_number">Mobilni telefon</string>
    <string name="ttv_floor">Sprat</string>
    <string name="ttv_post_code">Broj pošte</string>
    <string name="ttv_email">Email</string>
    <string name="ttv_room">Stan</string>
    <string name="ttv_building_type">Tip objekta</string>
    <string name="ttv_main_equipment_card_title">Glavna oprema</string>
    <string name="ttv_additiona_equipment1_card_title">Dodatni box 1</string>
    <string name="ttv_additiona_equipment2_card_title">Dodatni box 2</string>
    <string name="ttv_additiona_equipment3_card_title">Dodatni box 3</string>
    <string name="ttv_title_customer_data">Podaci o korisniku</string>
    <string name="ttv_title_package_data">Paket</string>
    <string name="ttv_title_equipment_data">Podaci o opremi</string>
    <string name="ttv_snack_max_additional_devices">Možete dodati najviše 3 dodatna uređaja</string>
    <string name="ttv_snack_delete_last_additional_box">Morate prvo da uklonite poslednji dodat uređaj</string>
    <string name="ttv_title_workorder_activation">Aktivacija naloga</string>
    <string name="ttv_message_workorder_activation">Da li ste sigurni da želite da pošaljete nalog na aktivaciju?</string>
    <string name="ttv_message_workorder_activation_sent">Uspešno ste poslali nalog na aktivaciju.</string>
    <string name="ttv_message_workorder_activation_failed">Došlo je do greške prilikom slanja radnog naloga.</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="ttv_addons_title">Dodaci</string>
    <string name="ttv_addons_included">Uključeni</string>
    <string name="ttv_addons_video">Video</string>
    <string name="ttv_addons_home">Kuća</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Nemate ni jedan nalog koji je u procesu</string>

    <string name="user_task_firstname">Ime</string>
    <string name="user_task_lastname">Prezime</string>
    <string name="user_task_partner_no">Partner No</string>
    <string name="user_task_provider_no">Provider Order No</string>
    <string name="user_task_service_order">Service Order No</string>
    <string name="user_task_sap_team">Sap tim</string>
    <string name="user_task_internal_team">Interni tim</string>
    <string name="user_task_status">Status</string>
    <string name="user_task_id">Task ID</string>
    <string name="user_task_bpm_id">BPM ID</string>
    <string name="user_task_name">Ime i prezime</string>

    <string name="home_ttv_activation">TotalTV Aktivacija</string>

    <string name="addon_price_valute">RSD</string>

</resources>

