<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rs.co.sbb.workorders.activity.SearchWorkorderActivity"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:id="@+id/contentSearchWorkorder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




                <EditText
                    android:id="@+id/etSearchWorkorder"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_search_workorder"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_search_workorder_short"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_margin="10dp"/>



            <Button
                android:id="@+id/btnSearchWorkorder"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_search"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />


        </LinearLayout>

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
