<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/total_tv_packages_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/total_tv_pacakges_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="Podaci o paketu"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <AutoCompleteTextView
                        android:id="@+id/tvTtvPackages"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:hint="Paket"
                        android:imeActionLabel="Paket" />

                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTtvBps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ttv_addons_title"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/ttvPackagesLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tvTtvBps"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTtvBpIncluded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/ttv_addons_included"
                        android:textColor="@color/colorAccent"
                        android:textSize="12dp"
                        android:textStyle="bold|italic"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:id="@+id/ttvBpIncluded"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tvTtvBpIncluded"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="vertical" />


                    <View
                        android:id="@+id/ttvViewSeparator2"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@+id/ttvBpIncluded"
                        android:layout_gravity="center"
                        android:background="@android:color/darker_gray"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/tvTtvBpVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/ttv_addons_video"
                        android:textColor="@color/colorAccent"
                        android:textSize="12dp"
                        android:textStyle="bold|italic"
                        android:visibility="invisible"
                        android:layout_below="@+id/ttvViewSeparator2"/>


                    <LinearLayout
                        android:id="@+id/ttvBpVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tvTtvBpVideo"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="vertical" />

                    <View
                        android:id="@+id/ttvViewSeparator1"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@+id/ttvBpVideo"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/darker_gray"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/tvTtvBpHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ttvViewSeparator1"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/ttv_addons_home"
                        android:textColor="@color/colorAccent"
                        android:textSize="12dp"
                        android:textStyle="bold|italic"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:id="@+id/ttvBpTtvHouse"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tvTtvBpHome"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="vertical" />


                </RelativeLayout>

            </RelativeLayout>


            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <AutoCompleteTextView
                        android:id="@+id/tvTtvOption"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:hint="Opcija"
                        android:imeActionLabel="Opcija" />

                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
